--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.5.0",
+    "fullcalendar": "^3.2.0",
     "jquery": "^2.1.4"
   },
   "babel": {
