--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pinax-webanalytics==2.0.4
 pinax-eventlog==1.1.2
 django-calendarium==1.3.4
 social-auth-app-django==1.1.0
+python-twitter=3.2.1
 gunicorn==19.6.0
 psycopg2==2.6.2
 
